[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.circleci
    | \.git
    | \.github
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
force_single_line = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
known_standard_library = ["setuptools"]

[tool.poetry]
name = "skranger"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.8"
cython = "^0.29.17"
numpy = "^1.18.3"
scikit-learn = "^0.22.2"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
isort = "^4.3.21"
pytest = "^5.4.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

