[tool.poetry]
name = "skranger"
version = "0.3.2"
description = "Python bindings for C++ ranger random forests"
authors = ["Flynn <crf204@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.rst"
homepage = "https://github.com/crflynn/skranger"
repository = "https://github.com/crflynn/skranger"
documentation = "https://github.com/crflynn/skranger"
include = [
    "skranger/ensemble/ranger/**/*",
    "CHANGELOG.rst",
    "LICENSE.txt",
    "README.rst",
]
build = "build.py"
keywords = ["random", "forest", "ranger", "machine", "learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "*"
scikit-learn = "*"

[tool.poetry.dev-dependencies]
cython = "^3.0a5"
black = {version = "^19.10b0", allow-prereleases = true}
isort = "^4.3.21"
pytest = "^5.4.1"
jupyter = "^1.0.0"
sphinx = "^3.0.3"
sphinx-rtd-theme = "^0.4.3"
scikit-survival = "^0.12.0"
pandas = "^1.0.3"
pytest-cov = "^2.9.0"
matplotlib = "^3.3.2"

[build-system]
requires = ["poetry>=0.12", "cython", "numpy"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.circleci
    | \.git
    | \.github
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
force_single_line = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
known_standard_library = ["setuptools"]
